[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "A real-world data cleaning environment where an AI agent must identify and fix data quality issues including null values, duplicates, type errors, and formatting inconsistencies across tabular datasets."
authors = [
    {name = "openenv-submission", email = "openenv-submission@example.com"},
]
license = {text = "MIT"}
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
]
keywords = ["openenv", "data-cleaning", "real-world", "tabular"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/openenv/openenv-data-cleaning"
Repository = "https://github.com/openenv/openenv-data-cleaning"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["environment", "server"]

[tool.setuptools.package-data]
"environment" = ["*.py"]
"server" = ["*.py"]